    default action' warning. Such mismatches are now considered errors.

+ ARGUMENT:

  * The formerly available option --no-default-action-return was renamed to
    default-actions (-d replacing -N), and can now also be used as a
    directive: %default-actions.  

  * Option --polymorphic-inline-skeleton (-m) is not used anymore and was
    removed.

  * Bisonc++'s man-page and documentation was updated.

  * After parsing a grammar file only plain warning messages (i.e., no
    file/line info is displayed) are issued. Switching to plain warning
    message is done in Parser::cleanup, and no longer in various members of
    objects being used after calling Parser::cleanup().

  * Comment (to end-of-line and C-style) can also be used in polymorphic type
    specifications.

  * The extensive calculator regression test declared a RuleValue(unsigned)
    constructor, but implemented a RuleValue(size_t) constructor, which does
    not compile on amd64 architectures. The regression test was modified by
    changing the constructor's size_t parameter type into unsigned.

  * Renamed the top-level bisonc++.cc and bisonc++.ih files to main.cc and
    main.ih, respectively.

  * New lexical scanner, built by Flexc++ V2.04.00.

  * All regression test grammar files contain the directive 
        %default-actions quiet
    preventing warning messages about adding default $$ = $1 action blocks to
    production rules without action blocks.

(WIP)

bisonc++ (4.13.01)

  * slightly modified the icmake build scripts to prevent multiple inclusions
    of some of the installed files.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 18 Dec 2015 13:41:08 +0100

bisonc++ (4.13.00)

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to a installation log file. The environment variable
    BISONCPP is no longer used.

  * Updated the usage info displayed by `./build', altered the procedure to
    install the files at their final destinations.
