@@ -87,14 +87,15 @@ END)
             "filename").
 
     it() loption(class-name) tt(className) nl()
-           Defines the name of the bf(C++) class that is generated.  If
-            neither this option, nor the tt(%class-name) directory is
-            specified, then the default class name (tt(Parser)) is used.
+           Defines the name of the generated bf(C++) class.  If neither this
+            option, nor the tt(%class-name) directive has been specified, then
+            the default class name (tt(Parser)) is used.
 
-           It is an error if this option is used and an already
-            existing parser-class header file does not define tt(class
-            `className') and/or if an already existing implementation header
-            file does not define members of the class tt(`className').
+           It is an error if this option is used and tt(className) differs
+            from the name of the class that is defined in an already existing
+            parser-class header file and/or if an already existing
+            implementation header file does not define members of the class
+            tt(`className').
 
     it() lsoption(class-skeleton)(C)(pathname)nl()
            tt(Pathname) defines the path name to the file containing the
@@ -110,6 +111,12 @@ END)
             augments the information written to the verbose grammar output
             file, generated by the tt(--verbose) option.
 
+    it() loption(constructor-checks) tt(off|on) nl() 
+           When tt(on) is specified (which is the default) compile-time checks
+            are inserted into the generated tt(parse.cc) file verifying that
+            default construction is available for the parsers's semantic value
+            type, or for all defined polymorphic types.
+
     it() loption(debug)nl() 
            Provide tt(parse) and its support functions with debugging code,
             showing the actual parsing process on the standard output
@@ -118,6 +125,15 @@ END)
             on-off)) member. An tt(#ifdef DEBUG) macro is not supported by
             bic(). Rerun bic() without the tt(--debug) option to remove the
             debugging code.
+
+    it() lsoption(default-actions)(d)(off|quiet|warn)nl()
+           When tt(warn) is specified (which is the default) an action block
+            doing tt($$ = $1) is added to production rules that do not
+            explicitly define final action blocks, and a warning is
+            issued. When tt(quiet) is specified such action blocks are
+            silently added. It is an error when there is a mismatch between
+            the types of $$ and $1.  When tt(off) is specified action blocks
+            are not added.
 
     it() label(ERRORVERBOSE)loption(error-verbose)nl()
            When a syntactic error is reported, the generated parse function
@@ -251,17 +267,16 @@ END)
            tt(Filename) defines the name of the source file to contain the
             parser member function tt(parse). Defaults to tt(parse.cc).
 
-    it() lsoption(polymorphic-skeleton)(M)(pathame)nl()
+    it() lsoption(polymorphic-code-skeleton)(M)(pathame)nl()
            tt(Pathname) defines the path name of the file containing the
-            skeleton of the polymorphic template classes. It defaults to the
+            skeleton of non-inline polymorphic functions. It defaults to the
             installation-defined default path name (e.g.,
-            tt(/usr/share/bisonc++/) plus tt(bisonc++polymorphic)).
+            tt(/usr/share/bisonc++/) plus tt(bisonc++polymorphic.code)).
 
-    it() lsoption(polymorphic-inline-skeleton)(m)(pathname)nl()
+    it() lsoption(polymorphic-skeleton)(m)(pathname)nl()
            tt(Pathname) defines the path name of the file containing the
-            skeleton of the inline implementations of the members of the
-            polymorphic template classes.  It defaults to the
-            installation-defined default path name (e.g.,
+            skeleton of the inline-code of the polymorphic value-types.  It
+            defaults to the installation-defined default path name (e.g.,
             tt(/usr/share/bisonc++/) plus tt(bisonc++polymorphic)).
 
     it() loption(print-tokens) (soption(t))nl()
@@ -363,6 +378,13 @@ END)
            Specifies the directory containing the skeleton files. This option
             can be overridden by the specific skeleton-specifying options
             (tt(-B -C, -H, -I, -M) and tt(-m)).
+
+    it() loption(tag-mismatches) tt(off|on)nl()
+           When tt(on) is specified (which is the default), issue a warning if
+            no $$ statement was detected in an action block, or if adding a
+            default $$ = $1 action was suppressed by a tt(default-actions off)
+            option or directive, or if run-time a semantic value mismatch is
+            observed.
 
     it() laoption(target-directory)(pathname) nl() 
            tt(Pathname) defines the directory where generated files should be
