@@ -20,13 +20,13 @@ void usage(string const &program_name)
     "   --analyze-only (-A): only analyze the grammar; except for possibly\n"
     "           the verbose grammar description file no files are written.\n"
 
+    "   --baseclass-header=<header> (-b):\n"
+    "           filename holding the base class definition.\n"
+
     "   --baseclass-preinclude=<header> (-H):\n"
     "           preinclude header in the base-class header file.\n"
     "           Use [header] to include <header>, otherwise \"header\"\n"
     "           will be included.\n"
-
-    "   --baseclass-header=<header> (-b):\n"
-    "           filename holding the base class definition.\n"
 
     "   --baseclass-skeleton=<skeleton> (-B):\n"
     "           location of the baseclass header skeleton.\n"
@@ -34,21 +34,41 @@ void usage(string const &program_name)
     "   --class-header=<header> (-c):\n"
     "           filename holding the parser class definition.\n"
 
+    "   --class-name=<name>:\n"
+    "           the name of the generated C++ class.\n"
+
     "   --class-skeleton=<skeleton> (-C):\n"
     "           location of the class header skeleton.\n"
 
-    "   --construction: write details about the grammar analysis to stdout.\n"
+    "   --construction:\n"
+    "           write details about the grammar analysis to stdout.\n"
 
-    "   --debug: generates debug output statements in the generated parse\n"
+    "   --constructor-checks=<off|on>:\n"
+    "           unless 'off', insert compile-time checks whether default\n"
+    "           construction is supported by STYPE__ or polymorphic types\n"
+
+    "   --debug:\n"
+    "           generates debug output statements in the generated parse\n"
     "           function's source.\n"
 
-    "   --error-verbose: the parse function will dump the parser's state\n"
-    "           stack to stdout when a syntactic error is reported\n"
+    "   --default-actions=<off|quiet|warn> (-d):\n"
+    "           unless 'off', add a $$ = $1 action block to production "
+                                                                    "rules\n" 
+    "           not defining final action blocks.\n"
+
+    "   --error-verbose:\n"
+    "           the parse function will dump the parser's state stack to "
+                                                                    "stdout\n"
+    "           when a syntactic error is reported\n"
 
     "   --filenames=<filename> (-f):\n"
     "           filename of output files (overruling the default filename).\n"
 
-    "   --help (-h): produce this information (and terminate).\n"
+    "   --flex:\n"
+    "           use the traditional `flex' interface.\n"
+
+    "   --help (-h):\n"
+    "           produce this information (and terminate).\n"
 
     "   --implementation-header=<header> (-i):\n"
     "           filename holding the implementation header.\n"
@@ -56,12 +76,9 @@ void usage(string const &program_name)
     "   --implementation-skeleton=<skeleton> (-I):\n"
     "           location of the implementation header skeleton.\n"
 
-    "   --include-only: catenate all grammar files in their order of\n"
-    "           processing to the standard output stream and terminate.\n"
-
-    "   --insert-stype: show selected semantic values in the output "
-                                                                "generated\n"
-    "           by --debug. Ignored unless --debug was specified.\n"
+    "   --insert-stype:\n"
+    "           show selected semantic values in the output generated by\n"
+    "           --debug. Ignored unless --debug was specified.\n"
 
     "   --max-inclusion-depth=<value>:\n"
     "           sets the maximum number of nested grammar files (default: "
@@ -69,33 +86,32 @@ void usage(string const &program_name)
     "   --namespace=<namespace> (-n):\n"
     "           define the parser in the mentioned namespace.\n"
 
-    "   --no-baseclass-header: don't create the parser's base class header.\n"
+    "   --no-baseclass-header:\n"
+    "           don't create the parser's base class header.\n"
 
-    "   --no-decoration (-D): do not include the user-defined actions when\n"
-    "           generating the parser's tt(parse) member.\n"
+    "   --no-decoration (-D):\n"
+    "           do not include the user-defined actions when generating the\n"
+    "           parser's tt(parse) member.\n"
 
-    "   --no-default-action (-N): do not use the default $$ = $1 assignment\n"
-    "           of semantic values when returning from an action block\n"
+    "   --no-lines:\n"
+    "           don't put #line directives in generated output, overruling "
+                                                                    "the \n"
+    "           %lines directive.\n"
 
-    "   --no-default-constructors: do not check whether default "
-                                                            "constructors\n"
-    "           are available for polymorphic semantic value types\n"
-
-    "   --no-lines: don't put #line directives in generated output,\n"
-    "           overruling the %lines directive.\n"
-
-    "   --no-parse-member: don't create the member parse().\n"
+    "   --no-parse-member:\n"
+    "           don't create the member parse().\n"
 
     "   --own-debug:\n"
     "           bisonc++ displays the actions of its parser while "
                                                                 "processing\n"
     "           its input file(s) (implies --verbose).\n"
 
-    "   --own-tokens (-t):\n"
-    "           bisonc++ displays the tokens and their corresponding\n"
-    "           matched text it received from its lexcial scanner.\n"
+    "   --own-tokens (-T):\n"
+    "           bisonc++ displays the tokens and corresponding matched "
+                                                                    "text,\n"
+    "           received from its lexcial scanner.\n"
 
-    "   --parser-skeleton=<parserskel> (-P):\n"
+    "   --parsefun-skeleton=<parserskel> (-P):\n"
     "           location of the parse function's skeleton.\n"
 
     "   --parsefun-source=<source> (-p):\n"
@@ -123,22 +139,43 @@ void usage(string const &program_name)
     "           specifies the name of the scanner class: this option is\n"
     "           only interpreted if --scanner (or %scanner) is also used.\n"
 
-    "   --scanner-debug: extensive display of the actions of bisonc++'s "
-                                                                "scanner\n"
+    "   --scanner-debug:\n"
+    "           extensive display of the actions of bisonc++'s scanner\n"
+
+    "   --scanner-matched-text-function=<function call>:\n"
+    "           specifies the function to call returning the text matched "
+                                                                    "by\n"
+    "           the lexical scanner when returning a token\n"
 
     "   --scanner-token-function=<scanner token function>:\n"
-    "           define the function called from lex() returning the next\n"
-    "           token returned (by default d_scanner.yylex() when --scanner\n"
-    "           is used)\n"
+    "           specifies the function to call by the parser's lex() "
+                                                                "function\n"
+    "           returning the next token returned by the lexcial scanner\n"
+    "           (by default d_scanner.yylex() when --scanner is used)\n"
 
-    "   --show-filenames: show the names of the used/generated files on\n"
-    "           the standard error stream.\n"
+    "   --show-filenames:\n"
+    "           show the names of the used/generated files on the standard\n"
+    "           error stream.\n"
 
     "   --skeleton-directory=<skeleton-directory> (-S):\n"
     "           location of the skeleton directory.\n"
 
-    "   --thread-safe: no static data are modified, making bisonc++'s\n"
-    "           generated code thread-safe.\n"
+    "   --tag-mismatches=<off|on>:\n"
+    "           unless 'off', issue a warning if no $$ statement was "
+                                                                "detected\n"
+    "           in an action block, or if no default $$ = $1 action can be\n"
+    "           added to a production rule without final action block, or\n"
+    "           if run-time a tag-mismatch is observed.\n"
+
+    "   --target-directory=<pathname>:\n"
+    "           pathname defines the directory where generated files should "
+                                                                        "be\n"
+    "           written. By default this is the directory where bisonc++ is\n"
+    "           called.\n"
+
+    "   --thread-safe:\n"
+    "           no static data are modified, making bisonc++'s generated\n"
+    "           code thread-safe.\n"
 
     "   --usage: produce this information (and terminate).\n"
 
@@ -150,4 +187,7 @@ void usage(string const &program_name)
 
                                                                     << endl;
 }
+
+
+
 
